    closes: #529643.
  * config.proto: use explicitely pc105 as keyboard model on hppa.
  * Document in README.Debian which package configures the console when
    several console-configuring packages are installed.  Thanks to Kurt
    Roeckx, closes: #524233, #524239.
  * Compressed translations (size reduced from 1.1M to 200K).

 -- Otavio Salvador <otavio@ossystems.com.br>  Wed, 20 May 2009 09:02:48 -0300

console-setup (1.36) unstable; urgency=low

  [ Anton Zinoviev ]
  * Document the empty FONTFACE/FONTSIZE in the comments of the
    configuration file.
  * Remove obsoleted sentence from the README file.
  * Update Keyboard/ckb directory.
  * Rearrange the code in config.proto to make easier to specify
    selectively the priority of the layout question depending on the
    source of the default value.
  * Simply execute the config script in udebs postinst, do not source.
    Thanks to Christian Perrier, closes: #439633.
  * Use 'type' builtin instead of the 'which' tool that is not available
    in d-i.  Thanks to Samuel Thibauld for the suggestion.
  * Use /bin/sh as shell for the config script (instead of /bin/bash).
    Make the script /usr/share/console-setup-mini executable.  Thanks to
    Christian Perrier for the testing and finding these problems.
  * Give //TRANSLIT to iconv in the config script.  Thanks to yanu for
    reporting the problem and to Samuel Thibault for providing a patch.
    Closes: #529012.

  [ Debconf translations ]
  * Spanish. Closes: #529031

  [ Christian Perrier ]
  * Change debian-installer/console-setup/title to
    debian-installer/console-setup-udeb/title so that
    menu item localization works

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 15 May 2009 21:41:13 +0300

console-setup (1.35) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Treat the Kazakh layout (kz) as non-Latin (LP: #356816).
    - Set default layout for Morocco to 'ma'.