@@ -114,43 +114,43 @@ install-mini: build
 	dh_clean -pconsole-setup-mini -k
 	dh_install -pconsole-setup-mini Keyboard/*.ekmap.gz \
 		usr/share/console-setup-mini
-	dh_install -pconsole-setup-mini Fonts/Arabic-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Arabic-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Armenian-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Armenian-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/CyrAsia-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/CyrAsia-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/CyrKoi-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/CyrKoi-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/CyrSlav-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/CyrSlav-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Ethiopian-Goha16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Ethiopian-Goha16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Georgian-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Georgian-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Greek-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Greek-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Hebrew-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Hebrew-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Lao-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Lao-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Lat15-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Lat15-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Lat2-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Lat2-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Lat38-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Lat38-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Lat7-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Lat7-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Thai-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Thai-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Uni1-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Uni1-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Uni2-VGA16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Uni2-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Uni3-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Uni3-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini Fonts/Vietnamese-Fixed16.psf.gz \
+	dh_install -pconsole-setup-mini Fonts/Vietnamese-Fixed16.psf \
 		usr/share/consolefonts
 	dh_install -pconsole-setup-mini debian/kbdnames.gz usr/share/console-setup-mini
 	dh_install -pconsole-setup-mini Keyboard/ckbcomp-mini usr/bin
@@ -200,43 +200,43 @@ install-udeb: build
 	dh_install -pconsole-setup-sun5-ekmap Keyboard/sun5.ekmap.gz \
 		usr/share/console-setup-mini
 # console-setup-fonts-udeb
-	dh_install -pconsole-setup-fonts-udeb Fonts/Arabic-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Arabic-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Armenian-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Armenian-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/CyrAsia-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/CyrAsia-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/CyrKoi-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/CyrKoi-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/CyrSlav-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/CyrSlav-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Ethiopian-Goha16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Ethiopian-Goha16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Georgian-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Georgian-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Greek-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Greek-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Hebrew-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Hebrew-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Lao-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Lao-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Lat15-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Lat15-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Lat2-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Lat2-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Lat38-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Lat38-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Lat7-TerminusBold16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Lat7-TerminusBold16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Thai-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Thai-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Uni1-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Uni1-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Uni2-VGA16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Uni2-VGA16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Uni3-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Uni3-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-fonts-udeb Fonts/Vietnamese-Fixed16.psf.gz \
+	dh_install -pconsole-setup-fonts-udeb Fonts/Vietnamese-Fixed16.psf \
 		usr/share/consolefonts
 # console-setup-udeb
 	dh_install -pconsole-setup-udeb Keyboard/ckbcomp-mini usr/bin
