@@ -167,7 +167,7 @@ if [ "$keyboard_only" != yes ] && [ "$ACTIVE_CONSOLES" ]; then
     # Load the font
     if [ -z "$FONT" ]; then
 	if which ckbcomp-mini >/dev/null; then
-	    FONT=$(echo `ls /usr/share/consolefonts/$CODESET-*.psf.gz \
+	    FONT=$(echo `ls /usr/share/consolefonts/$CODESET-*.psf \
                 2>/dev/null`)
 	    FONT=${FONT%% *}
 	elif [ "$FONTFACE" ] && [ "$FONTSIZE" ]; then
