@@ -18,6 +18,9 @@ console-setup (1.37) UNRELEASED; urgency=low
     several console-configuring packages are installed.  Thanks to Kurt
     Roeckx, closes: #524233, #524239.
   * Compressed translations (size reduced from 1.1M to 200K).
+  * Install uncompressed fonts in console-setup-fonts-udeb and
+    console-setup-mini (setfont can not load compressed fonts if gunzip is
+    not installed).
 
  -- Otavio Salvador <otavio@ossystems.com.br>  Wed, 20 May 2009 09:02:48 -0300
 
